[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "invicta"
version = "0.5.0"
dependencies = ["pyspellchecker"]
license = { file = "LICENSE" }
keywords = ["encryption", "cipher", "utility"]
authors = [
    { name = "Lily Patchen" }
]

[project.scripts]
invicta = "invicta.main:main"